[gd_scene load_steps=12 format=3 uid="uid://di5my0u7giody"]

[ext_resource type="Script" path="res://scripts/CodeDoor.gd" id="1_e7b6b"]
[ext_resource type="Script" path="res://scripts/number_flip.gd" id="2_s65x6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s41ou"]
size = Vector3(1, 5, 5)

[sub_resource type="BoxMesh" id="BoxMesh_6hwo7"]
size = Vector3(1, 5, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_ntcep"]
size = Vector3(0.169922, 1.42407, 1)

[sub_resource type="TextMesh" id="TextMesh_akdt1"]
text = "0"

[sub_resource type="TextMesh" id="TextMesh_66744"]
text = "0"

[sub_resource type="TextMesh" id="TextMesh_kjmgw"]
text = "0"

[sub_resource type="Animation" id="Animation_mdn3s"]
resource_name = "open_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CodeDoor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_5jhdf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CodeDoor:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghk1r"]
_data = {
"RESET": SubResource("Animation_5jhdf"),
"open_door": SubResource("Animation_mdn3s")
}

[node name="CodeDoor" type="Node3D"]

[node name="CodeDoor" type="StaticBody3D" parent="."]
script = ExtResource("1_e7b6b")

[node name="Collider" type="CollisionShape3D" parent="CodeDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
shape = SubResource("BoxShape3D_s41ou")

[node name="Mesh" type="MeshInstance3D" parent="CodeDoor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)
mesh = SubResource("BoxMesh_6hwo7")

[node name="SpotLight3D" type="SpotLight3D" parent="CodeDoor"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 1, 2.08399, -2)
light_color = Color(0.643137, 0.996078, 0.788235, 1)
light_energy = 16.0
shadow_enabled = true
spot_range = 6.08776
spot_angle = 48.6971
spot_angle_attenuation = 0.482969

[node name="Numbers" type="Node3D" parent="CodeDoor"]

[node name="Number1" type="StaticBody3D" parent="CodeDoor/Numbers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1)
script = ExtResource("2_s65x6")

[node name="Collider" type="CollisionShape3D" parent="CodeDoor/Numbers/Number1"]
shape = SubResource("BoxShape3D_ntcep")

[node name="Mesh" type="MeshInstance3D" parent="CodeDoor/Numbers/Number1"]
transform = Transform3D(-4.80825e-07, 0, 11, 0, 11, 0, -11, 0, -4.80825e-07, 0, 0, 0)
mesh = SubResource("TextMesh_akdt1")

[node name="Number2" type="StaticBody3D" parent="CodeDoor/Numbers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -2)
script = ExtResource("2_s65x6")

[node name="Collider" type="CollisionShape3D" parent="CodeDoor/Numbers/Number2"]
shape = SubResource("BoxShape3D_ntcep")

[node name="Mesh" type="MeshInstance3D" parent="CodeDoor/Numbers/Number2"]
transform = Transform3D(-4.80825e-07, 0, 11, 0, 11, 0, -11, 0, -4.80825e-07, 0, 0, 0)
mesh = SubResource("TextMesh_66744")

[node name="Number3" type="StaticBody3D" parent="CodeDoor/Numbers"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -3)
script = ExtResource("2_s65x6")

[node name="Collider" type="CollisionShape3D" parent="CodeDoor/Numbers/Number3"]
shape = SubResource("BoxShape3D_ntcep")

[node name="Mesh" type="MeshInstance3D" parent="CodeDoor/Numbers/Number3"]
transform = Transform3D(-4.80825e-07, 0, 11, 0, 11, 0, -11, 0, -4.80825e-07, 0, 0, 0)
mesh = SubResource("TextMesh_kjmgw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ghk1r")
}

[connection signal="number_changed" from="CodeDoor/Numbers/Number1" to="CodeDoor" method="_on_number_1_number_changed"]
[connection signal="number_changed" from="CodeDoor/Numbers/Number2" to="CodeDoor" method="_on_number_2_number_changed"]
[connection signal="number_changed" from="CodeDoor/Numbers/Number3" to="CodeDoor" method="_on_number_3_number_changed"]
